# CppArgParser

./: .gitignore  .travis.yml  AliasTest.cpp  AppNameTest.cpp  ArgParser.cpp  ArgParser.h  ArgParserImpl.cpp  ArgParserImpl.h  ArgParserTest.cpp  ArgParserTypes.cpp  ArgParserTypes.h  ArrayTest.cpp  CMakeLists.txt  MapSwitch.h  ParserTest.cpp  README.md  RequiredTest.cpp  RequiredTest4.cpp  Test.h  ci.py  testagg.py  testagg.yml
test/: 03_base.ref  03_unknonwn.ref  04_b.ref  04_b_dup.ref  05_c.ref  06_uc.ref  07_s_neg.ref  08_us_big.ref  10_un.ref  11_l.ref  12_ul.ref  alias1.ref  alias2.ref  alias3.ref  aliasB1.ref  aliasB2.ref  aliasB3.ref  aliasBM.ref  aliasM_fail.ref  app_name_1.ref  array1.ref  array2.ref  array2_fail.ref  b.ref  b_eq_empty.ref  b_m1.ref  b_m2.ref  c.ref  c_dup.ref  c_missing.ref  c_partial.ref  help.ref  l_neg.ref  l_neg_big.ref  l_pos.ref  ll.ref  ll_neg.ref  ll_neg_big.ref  ll_pos.ref  ll_pos_big.ref  (+37 more)
